# libgit3

./: CMakeLists.txt  LIBGIT3_MODIFICATIONS.md  README.md
cmake/: DefaultCFlags.cmake  ExperimentalFeatures.cmake  IdeSplitSources.cmake  SelectAuthNTLM.cmake  SelectAuthNegotiate.cmake  SelectCompression.cmake  SelectHTTPParser.cmake  SelectHTTPSBackend.cmake  SelectHashes.cmake  SelectI18n.cmake  SelectNsec.cmake  SelectRegex.cmake  SelectSSH.cmake  SelectThreads.cmake  SelectXdiff.cmake
examples/: CMakeLists.txt  add.c  args.c  args.h  blame.c  cat-file.c  checkout.c  clone.c  commit.c  common.c  common.h  config.c  describe.c  diff.c  fetch.c  for-each-ref.c  general.c  index-pack.c  init.c  lg2.c  log.c  ls-files.c  ls-remote.c  merge.c  push.c  remote.c  rev-list.c  rev-parse.c  show-index.c  stash.c  status.c  tag.c
fuzzers/: CMakeLists.txt  commit_graph_fuzzer.c  config_file_fuzzer.c  download_refs_fuzzer.c  fuzzer_utils.c  fuzzer_utils.h  midx_fuzzer.c  objects_fuzzer.c  packfile_fuzzer.c  patch_parse_fuzzer.c  revparse_fuzzer.c  standalone_driver.c  standalone_driver.h
include/: git3.h
include/git3/: annotated_commit.h  apply.h  attr.h  blame.h  blob.h  branch.h  buffer.h  cert.h  checkout.h  cherrypick.h  clone.h  commit.h  common.h  config.h  cred_helpers.h  credential.h  credential_helpers.h  deprecated.h  describe.h  diff.h  email.h  errors.h  experimental.h  filter.h  global.h  graph.h  ignore.h  index.h  indexer.h  mailmap.h  merge.h  message.h  net.h  notes.h  object.h  odb.h  odb_backend.h  oid.h  oidarray.h  pack.h  (+27 more)
include/git3/sys/: alloc.h  commit.h  commit_graph.h  config.h  cred.h  credential.h  diff.h  email.h  errors.h  filter.h  hashsig.h  index.h  mempack.h  merge.h  midx.h  odb_backend.h  openssl.h  path.h  refdb_backend.h  refs.h  remote.h  repository.h  stream.h  transport.h
script/: user_model.c  user_nodefs.h
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  cmd.c  cmd.h  cmd_blame.c  cmd_cat_file.c  cmd_clone.c  cmd_config.c  cmd_hash_object.c  cmd_help.c  cmd_index_pack.c  cmd_init.c  cmd_version.c  common.c  common.h  error.h  main.c  opt.c  opt.h  opt_usage.c  opt_usage.h  progress.c  progress.h  sighandler.h
src/cli/unix/: sighandler.c
src/cli/win32/: precompiled.h  sighandler.c
src/libgit2/: CMakeLists.txt  repository.h
src/libgit3/: CMakeLists.txt  annotated_commit.c  annotated_commit.h  apply.c  apply.h  attr.c  attr.h  attr_file.c  attr_file.h  attrcache.c  attrcache.h  blame.c  blame.h  blame_git.c  blame_git.h  blob.c  blob.h  branch.c  branch.h  buf.c  buf.h  cache.c  cache.h  checkout.c  checkout.h  cherrypick.c  clone.c  clone.h  commit.c  commit.h  commit_graph.c  commit_graph.h  commit_list.c  commit_list.h  common.h  config.c  config.h  config_backend.h  config_cache.c  config_file.c  (+150 more)
src/libgit3/streams/: mbedtls.c  mbedtls.h  openssl.c  openssl.h  openssl_dynamic.c  openssl_dynamic.h  openssl_legacy.c  openssl_legacy.h  registry.c  registry.h  schannel.c  schannel.h  socket.c  socket.h  stransport.c  stransport.h  tls.c  tls.h
src/libgit3/transports/: auth.c  auth.h  auth_gssapi.c  auth_negotiate.h  auth_ntlm.h  auth_ntlmclient.c  auth_sspi.c  credential.c  credential_helpers.c  git.c  http.c  http.h  httpclient.c  httpclient.h  httpparser.c  httpparser.h  local.c  smart.c  smart.h  smart_pkt.c  smart_protocol.c  ssh.c  ssh_exec.c  ssh_exec.h  ssh_libssh2.c  ssh_libssh2.h  winhttp.c
src/util/: CMakeLists.txt  alloc.c  alloc.h  array.h  assert_safe.h  bitvec.h  cc-compat.h  ctype_compat.h  date.c  date.h  errors.c  errors.h  filebuf.c  filebuf.h  fs_path.c  fs_path.h  futils.c  futils.h  git2_util.h  git3_features.h.in  git3_util.h  hash.c  hash.h  hashmap.h  hashmap_str.h  integer.h  map.h  net.c  net.h  pool.c  pool.h  posix.c  posix.h  pqueue.c  pqueue.h  process.h  rand.c  rand.h  regexp.c  regexp.h  (+25 more)
src/util/allocators/: debugalloc.c  debugalloc.h  failalloc.c  failalloc.h  stdalloc.c  stdalloc.h  win32_leakcheck.c  win32_leakcheck.h
src/util/hash/: builtin.c  builtin.h  collisiondetect.c  collisiondetect.h  common_crypto.c  common_crypto.h  mbedtls.c  mbedtls.h  openssl.c  openssl.h  sha.h  sha3.c  sha3.h  win32.c  win32.h
src/util/hash/sha3/block/: sha3.c  sha3.h
src/util/unix/: map.c  posix.h  process.c  pthread.h  realpath.c
src/util/win32/: dir.c  dir.h  error.c  error.h  map.c  mingw-compat.h  msvc-compat.h  path_w32.c  path_w32.h  posix.h  posix_w32.c  precompiled.h  process.c  reparse.h  thread.c  thread.h  utf-conv.c  utf-conv.h  version.h  w32_buffer.c  w32_buffer.h  w32_common.h  w32_leakcheck.c  w32_leakcheck.h  w32_util.c  w32_util.h  win32-compat.h
tests/: CMakeLists.txt
tests/clar/: clar_libgit2.c  clar_libgit2.h  clar_libgit2_alloc.c  clar_libgit2_alloc.h  clar_libgit2_timer.c  clar_libgit2_timer.h  clar_libgit2_trace.c  clar_libgit2_trace.h  main.c
tests/headertest/: CMakeLists.txt  headertest.c
tests/libgit3/: CMakeLists.txt  precompiled.h
tests/libgit3/apply/: apply_helpers.c  apply_helpers.h  both.c  callbacks.c  check.c  fromdiff.c  fromfile.c  index.c  partial.c  tree.c  workdir.c
tests/libgit3/attr/: attr_expect.h  file.c  flags.c  lookup.c  macro.c  repo.c
tests/libgit3/blame/: blame_helpers.c  blame_helpers.h  buffer.c  getters.c  harder.c  simple.c
tests/libgit3/checkout/: binaryunicode.c  checkout_helpers.c  checkout_helpers.h  conflict.c  crlf.c  head.c  icase.c  index.c  nasty.c  tree.c  typechange.c
tests/libgit3/cherrypick/: bare.c  workdir.c
tests/libgit3/clone/: empty.c  local.c  nonetwork.c  transport.c
tests/libgit3/commit/: commit.c  create.c  parent.c  parse.c  signature.c  write.c
tests/libgit3/config/: add.c  backend.c  configlevel.c  (+16 more)
tests/util/: CMakeLists.txt  alloc.c  array.c  assert.c  bitvec.c  copy.c  dirent.c  encoding.c  errors.c  filebuf.c  ftruncate.c  futils.c  gitstr.c  hashmap.c  hex.c  hostname.c  iconv.c  init.c  integer.c  link.c  memmem.c  mkdir.c  pool.c  posix.c  pqueue.c  precompiled.h  qsort.c  regexp.c  rmdir.c  sha1.c  sha256.c  sortedcache.c  stat.c  string.c  strtol.c  utf8.c  vector.c  wildmatch.c  zstream.c
(+380 files in other folders)
